--- a/mosquitto.conf
+++ b/mosquitto.conf
@@ -27,12 +27,12 @@ allow_anonymous true
 listener 1883 0.0.0.0
 
 connection cloudmqtt
-address XXXXXXXXXXXXX.s1.eu.hivemq.cloud:8883 # add HiveMQ adress
+address <url>.s1.eu.hivemq.cloud:8883 # add HiveMQ adress
 topic # both 1
 bridge_attempt_unsubscribe false
 bridge_protocol_version mqttv311
 notifications false
-remote_username XXXXXXXXX # add username
-remote_password XXXXXXXXX # add password
+remote_username <hivemq_username> # add username
+remote_password <hivemq_password> # add password
 try_private false
 bridge_capath /etc/ssl/certs/
